# redteamoracle

./: README.md  pyproject.toml
src/redteamoracle/: __init__.py  __main__.py  cli.py  oracle.py
src/redteamoracle/ai/: __init__.py
src/redteamoracle/modules/: __init__.py
